[tool.poetry]
name = "4-distributed-bullshit"
version = "0.1.0"
description = ""
authors = ["leadpogrommer <ilyamerzlakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioconsole = "^0.6.2"
janus = "^1.0.0"
qasync = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
